fix(`app/payload/custom.scss`): unaligned table header; better grid for block picker

--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -1,3 +1,11 @@
 .blocks-field__block-header {
 	@apply items-center;
 }
+
+.heading-layout {
+	@apply flex h-[54px] items-center;
+}
+
+.blocks-drawer__blocks {
+	@apply grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))];
+}
